--- a/static/css/search.less
+++ b/static/css/search.less
@@ -121,11 +121,11 @@
     padding-left: @margin-xx-large * 1px;
   }
 
-  #search {
+  input[type=text], #search {
     padding-right: 120px;
   }
 
-  #search input[type=text] {
+  .search-form input[type=text], #search input[type=text] {
     .search-font-size(@search-font-medium);
     border-color: @color-dark-grey;
     border-radius: 2px;
@@ -358,7 +358,7 @@
     margin-top: @margin-small * 1px;
     margin-bottom: @margin-xx-large * 1px;
 
-    * { 
+    * {
       font-size: inherit;
     }
   }
