show permalink + highlight comment

--- a/static/css/reddit.less
+++ b/static/css/reddit.less
@@ -1774,6 +1774,18 @@ body.with-listing-chooser.explore-page #header .pagename {
     border-radius: 3px;
 }
 
+.comment-highlight {
+    background-color: #F3F8FD;
+}
+
+.white-comment {
+    background-color: #fff;
+}
+
+.child .inner-comment {
+    border-left: 1px solid #edf1f3;
+}
+
 .commentarea .menuarea {
     border: none;
     margin: 0 310px 10px 10px;
